[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"  # MIT OR Apache-2.0
serde_derive = "1.0.144"  # MIT OR Apache-2.0
rust-crypto = "0.2.36"  # MIT OR Apache-2.0
